--- a/style.css
+++ b/style.css
@@ -21,7 +21,9 @@ body {
     width: 100%;
     z-index: 1000;
 }*/
+
 #navigationBar {
+    /*for appear on scroll-up nav bar*/
     position: sticky;
     top: 0;
     left: 0;
